# check-in-w-fingerprint-esp32-mqtt

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/application/: CMakeLists.txt
components/application/include/application/: app_controller.h  ports.h  use_cases.h
components/application/src/: app_controller.c  use_cases.c
components/domain/: CMakeLists.txt
components/domain/include/domain/: domain_models.h  ports.h
components/domain/src/: domain_models.c
components/drivers/as608/: CMakeLists.txt
components/drivers/as608/examples/: example_main.c
components/infrastructure/: CMakeLists.txt  idf_component.yml
components/infrastructure/src/: config_repository_nvs.c  mqtt_adapter_stub.c  network_manager_stub.c  offline_queue_nvs.c  websocket_transport.c
components/platform/: CMakeLists.txt
components/platform/src/: runtime_mode.c
components/webui/: CMakeLists.txt
components/webui/src/: webui_server.c
docs/: agent-handoff-prompt.md  architecture.md  getting-started.md  hardware-integration.md  mqtt-contract.md  websocket-protocol.md
docs/use-cases/: README.md  check-in.md  delete-fingerprint.md  demo-mode.md  export-migration-data.md  factory-reset.md  import-migration-data.md  initial-configuration.md  offline-queue-replay.md  register-fingerprint.md
local/docker/: README.md  docker-compose.yml
local/docker/node-server/: Dockerfile  package.json  server.js  server.test.js
main/: CMakeLists.txt  main.c
test/host/: CMakeLists.txt
test/host/include/: test_fakes.h
test/host/src/: test_main.c  test_use_cases.c
(+19 files in other folders)
